# autoencoders-rare-events

./: Autoencoders for classification.ipynb  Ex 1 - Semi-supervised classification with autoencoders.ipynb  Ex2 Autoencoders for extreme rare events.ipynb  README.md  Semi-supervised classification with autoencoders.ipynb  autoencoder_classifier.h5  pyproject.toml
logs/train/: events.out.tfevents.1658699612.BlackMesa.local.6177.0.v2
logs/validation/: events.out.tfevents.1658699623.BlackMesa.local.6177.1.v2
