[tool.poetry]
name = "autoencoders-rare-events"
version = "0.1.0"
description = ""
authors = ["Felipe Tadeu <souzalima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
jupyterlab = "^3.4.4"
sklearn2 = "^0.0.13"
sklearn = "^0.0"
matplotlib = "^3.5.2"
pandas = "^1.4.3"
numpy = "^1.23.1"
seaborn = "^0.11.2"
tensorflow-macos = "^2.9.2"
tensorflow-metal = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
